flux/apps/networking/envoy-gateway/gateway-public/gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-public
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-cr
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-public
  description: "Public Envoy Gateway for internet-facing traffic"
